--- a/main.html
+++ b/main.html
@@ -8,6 +8,43 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name</label> <br>
+		<input type="text" id="name" name="name" required> <br>
+
+		<label for="email">Email</label><br>
+		<input type="email" id="email" name="email" required><br>
+
+		<label>Gender</label><br>
+		<input type="radio" id="gender_m" name="gender">
+		<label for="gender_m">Male</label><br>
+		<input type="radio" id="gender_f" name="gender">
+		<label for="gender_f">Female</label><br>
+
+		<label for="laptop">Laptop Brands</label>
+		<select id="laptop" name="laptop" required>
+			<option value="apple">Apple</option>
+			<option value="asus">Asus</option>
+			<option value="hp">HP</option>
+		</select><br>
+
+		<label for="age">Age</label><br>
+		<input type="number" id="age" name="age" min="0" required><br>
+
+		<label for="dob">Date of Birth</label><br>
+		<input type="date" id="dob" name="dob" required><br>
+
+		<label for="password">Password</label><br>
+		<input type="password" id="password" name="password" required>
+		<br>
+
+		<label for="portfolio">Portfolio URL</label><br>
+		<input type="url" id="portfolio" name="portfolio"><br>
+
+		<button type="submit">Submit</button>
+
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
