--- a/main.html
+++ b/main.html
@@ -16,14 +16,14 @@
 		<input type="email" id="email" name="email" required><br>
 
 		<label>Gender</label><br>
-		<input type="radio" id="gender_m" name="gender">
+		<input type="radio" id="gender_m" name="gender" required>
 		<label for="gender_m">Male</label><br>
 		<input type="radio" id="gender_f" name="gender">
 		<label for="gender_f">Female</label><br>
 
 		<label for="laptop">Laptop Brands</label>
-		<select id="laptop" name="laptop" required>
-			<option value="apple">Apple</option>
+		<select id="laptop" name="laptop" >
+			<option value="apple" required>Apple</option>
 			<option value="asus">Asus</option>
 			<option value="hp">HP</option>
 		</select><br>
