--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 
 		<label for="laptop">Laptop Brands</label>
 		<select id="laptop" name="laptop" >
-			<option value="apple" required>Apple</option>
+			<option value="apple">Apple</option>
 			<option value="asus">Asus</option>
 			<option value="hp">HP</option>
 		</select><br>
