--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		<input type="email" id="email" name="email" required><br>
 
 		<label>Gender</label><br>
-		<input type="radio" id="gender_m" name="gender" required>
+		<input type="radio" id="gender_m" name="gender">
 		<label for="gender_m">Male</label><br>
 		<input type="radio" id="gender_f" name="gender">
 		<label for="gender_f">Female</label><br>
